// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.appmanager.groups;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/app-manager/groups;groups";

// Proto file describing the App group.

// The app group.
message AppGroup {
    // The unique ID to identify the app group.
    uint64 id = 1;
    
    // The unique name to identify the app group.
    string name = 2;

    // The app group type.
    AppGroupType type = 3;

    // It stores the date and time at which the app group was created.
    google.protobuf.Timestamp created_at = 4;

    // The user ID to identify the user who added the app group.
    uint64 created_by = 5;

    // It stores the date and time at which the app group was updated.
    google.protobuf.Timestamp updated_at = 6;

    // The user ID to identify the user who updated the app group.
    uint64 updated_by = 7;

    // The status of the app group can be New(1), Active(2), or Inactive(3).
    AppGroupStatus status = 8;

    // It stores the date and time at which the app group status was updated.
    google.protobuf.Timestamp status_updated_at = 9;

    // The user ID to identify the user who updated the app group status.
    uint64 status_updated_by = 10;

    // Optional. The app group status comment.
    google.protobuf.StringValue status_comment = 11;

    // The app group version.
    string version = 12;

    // The app group description.
    string description = 13;
}

// The app group type.
enum AppGroupType {
    // Unspecified. Do not use.
    APP_GROUP_TYPE_UNSPECIFIED = 0;
    SERVICE = 1;
}

// The app group status.
enum AppGroupStatus {
    // Unspecified. Do not use.
    APP_GROUP_STATUS_UNSPECIFIED = 0;
    NEW = 1;
    ACTIVE = 2;
    INACTIVE = 3;
}
